src/objects/Costs_Time__c.object
<CustomObject>
    <description>Costs &amp; Time of OCM requests.</description>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCM_Tracker_Identifier__c</fullName>
        <label>OCM Tracker Identifier</label>
        <referenceTo>Comms_Marketing_Service__c</referenceTo>
        <relationshipName>Related_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <inlineHelpText>Time Spent in Hours. Example if it took 1 hour 15 minutes, then 1.25 should be entered here.</inlineHelpText>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost * Quantity</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Costs &amp; Time</label>
    <nameField>
        <displayFormat>CT{00000000}</displayFormat>
        <label>Costs &amp; Time Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs &amp; Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>